<resources>
    <string name="app_name">DoomMap</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crimeID">crimeID:</string>
    <string name="timeOfEvent">timeOfEvent:</string>
    <string name="cep">CEP:</string>
    <string name="send">Enviar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="update">Atualizar</string>
    <string name="url">URL:</string>
</resources>
