<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/add_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/crimeID"
                android:gravity="center"/>

            <EditText android:id="@+id/crimeID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/timeOfEvent"
                android:gravity="center"/>

            <EditText android:id="@+id/timeOfEvent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:focusable="false"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cep"
                android:gravity="center"/>

            <EditText android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <Button android:id="@+id/sendB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/add_margin"
            android:text="@string/send"/>

    </LinearLayout>

</FrameLayout>