<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/add_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/edittext_width"
                android:layout_height="match_parent"
                android:text="@string/crimeID"
                android:gravity="left|center_vertical"
                android:textSize="13sp"/>

            <EditText android:id="@+id/crimeID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/edittext_left"
                android:layout_marginTop="@dimen/edittext_top"
                android:layout_marginBottom="@dimen/edittext_top"
                android:paddingLeft="@dimen/edittext_left"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/edittext_width"
                android:layout_height="match_parent"
                android:text="@string/timeOfEvent"
                android:gravity="left|center_vertical"
                android:textSize="13sp"/>

            <EditText android:id="@+id/timeOfEvent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/edittext_left"
                android:layout_marginTop="@dimen/edittext_top"
                android:layout_marginBottom="@dimen/edittext_top"
                android:paddingLeft="@dimen/edittext_left"
                android:gravity="center_vertical"
                android:focusable="false"
                android:textSize="13sp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/edittext_width"
                android:layout_height="match_parent"
                android:text="@string/cep"
                android:gravity="left|center_vertical"
                android:textSize="13sp"/>

            <EditText android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/edittext_left"
                android:layout_marginTop="@dimen/edittext_top"
                android:layout_marginBottom="@dimen/edittext_top"
                android:paddingLeft="@dimen/edittext_left"
                android:gravity="center_vertical"
                android:background="@android:color/darker_gray"
                android:textSize="13sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/add_margin">

            <Button android:id="@+id/editB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:text="@string/edit"
                android:layout_marginRight="@dimen/edittext_top"/>

            <Button android:id="@+id/deleteB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:text="@string/delete"
                android:layout_marginLeft="@dimen/edittext_top"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>