<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/crimeID"
                android:gravity="center"/>

            <TextView android:id="@+id/crimeID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/timeOfEvent"
                android:gravity="center"/>

            <TextView android:id="@+id/timeOfEvent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cep"
                android:gravity="center"/>

            <TextView android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"/>

    </LinearLayout>

</FrameLayout>